--- a/src/app/pages/pages-admin/productos/productos.component.html
+++ b/src/app/pages/pages-admin/productos/productos.component.html
@@ -46,12 +46,16 @@
 
       <ng-container matColumnDef="user_id">
         <th mat-header-cell *matHeaderCellDef>Proveedor</th>
-        <td mat-cell *matCellDef="let product">{{ product.user_id }}</td>
+        <td mat-cell *matCellDef="let product">
+          {{ product.usuario.nombres }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="categoria_id">
         <th mat-header-cell *matHeaderCellDef>Categoria</th>
-        <td mat-cell *matCellDef="let product">{{ product.category_id }}</td>
+        <td mat-cell *matCellDef="let product">
+          {{ product.category.nombre }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="acciones">
@@ -85,7 +89,7 @@
     </table>
   </div>
   <mat-paginator
-    [pageSize]="5"
+    [pageSize]="10"
     [pageSizeOptions]="[5, 10, 25, 100]"
     [length]="total"
     showFirstLastButtons
