--- a/src/app/pages/robot-vigilancia-seguridad/robot-vigilancia-seguridad.component.html
+++ b/src/app/pages/robot-vigilancia-seguridad/robot-vigilancia-seguridad.component.html
@@ -1,1 +1,35 @@
-<p>robot-vigilancia-seguridad works!</p>
+<div class="container">
+  <section class="productos">
+    <div class="subtitle">
+      <h2>{{ categoria.nombre }}</h2>
+    </div>
+    <div class="row">
+      @for (producto of productos; track producto.id) {
+      <mat-card class="example-card">
+        <img
+          class="img-card"
+          mat-card-image
+          [src]="producto.ruta_imagen"
+          alt="Photo of a Shiba Inu"
+        />
+        <mat-card-content>
+          <mat-card-title>{{ producto.nombre }}</mat-card-title>
+          <mat-card-subtitle>
+            {{ producto.descripcion }}
+          </mat-card-subtitle>
+          <div class="precio">
+            <div class="unidad">S/.</div>
+            <div class="monto">{{ producto.precio }}</div>
+          </div>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button><mat-icon>add</mat-icon> Detalles</button>
+          <button mat-raised-button color="primary">
+            <mat-icon>shopping_cart</mat-icon> Añadir al carrito
+          </button>
+        </mat-card-actions>
+      </mat-card>
+      }
+    </div>
+  </section>
+</div>
