Agregado icono a la interfaz de categoría y eliminados console.log innecesarios.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,30 +48,16 @@
               Crear cuenta
             </a>
           </div>
-          } @if(statusLogged | async){
+          }@else {
           <div class="user">
             <p>{{ userLogged.nombres }} {{ userLogged.apellidos }}</p>
           </div>
-          } @if((statusLogged | async) && (userLogged.role === 'admin')){}
-          @else{
-          <button
-            mat-icon-button
-            [matMenuTriggerFor]="menu"
-            aria-label="Example icon-button"
-          >
-            <mat-icon>account_circle</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button (click)="logout()" mat-menu-item>
-              <mat-icon>logout</mat-icon> salir
-            </button>
-          </mat-menu>
+          @if(userLogged.role === 'cliente'){
           <button mat-icon-button aria-label="Example icon-button">
             <mat-icon>shopping_cart</mat-icon>
           </button>
-          }
+          } }
         </mat-toolbar>
-
         <div class="contenido">
           <router-outlet />
         </div>
