--- a/src/app/components/sidebar-admin/sidebar-admin.component.html
+++ b/src/app/components/sidebar-admin/sidebar-admin.component.html
@@ -15,11 +15,7 @@
     <ul>
       <li>
         <div class="item">
-          <a
-            routerLink="contenido"
-            routerLinkActive="router-link-active"
-            (click)="openedSubMenu = null"
-          >
+          <a routerLink="contenido" routerLinkActive="router-link-active">
             <mat-icon>content_paste_search</mat-icon>
             <span>Contenido</span>
           </a>
@@ -27,11 +23,7 @@
       </li>
       <li>
         <div class="item">
-          <a
-            routerLink="categorias"
-            routerLinkActive="router-link-active"
-            (click)="openedSubMenu = null"
-          >
+          <a routerLink="categorias" routerLinkActive="router-link-active">
             <mat-icon>category</mat-icon>
             <span>Categorias</span>
           </a>
@@ -39,11 +31,7 @@
       </li>
       <li>
         <div class="item">
-          <a
-            routerLink="productos"
-            routerLinkActive="router-link-active"
-            (click)="openedSubMenu = null"
-          >
+          <a routerLink="productos" routerLinkActive="router-link-active">
             <mat-icon>inventory_2</mat-icon>
             <span>Productos</span>
           </a>
@@ -51,11 +39,7 @@
       </li>
       <li>
         <div class="item">
-          <a
-            routerLink="usuarios"
-            routerLinkActive="router-link-active"
-            (click)="openedSubMenu = null"
-          >
+          <a routerLink="usuarios" routerLinkActive="router-link-active">
             <mat-icon>group</mat-icon>
             <span>Usuarios</span>
           </a>
@@ -63,22 +47,19 @@
       </li>
       <li>
         <div class="item">
-          <a
-            routerLink="solicitudes"
-            routerLinkActive="router-link-active"
-            (click)="openedSubMenu = null"
-          >
+          <a routerLink="solicitudes" routerLinkActive="router-link-active">
             <mat-icon>handshake</mat-icon>
             <span>Solicitudes</span>
           </a>
         </div>
       </li>
     </ul>
+    @if(isLogged){
     <footer>
       <div class="logout">
         <div class="user-name">
           <mat-icon>account_circle</mat-icon>
-          <div>Suclupe Farroñan Wilmer Yoel</div>
+          <div>{{ userLogged.apellidos }} {{ userLogged.nombres }}</div>
         </div>
         <button
           mat-icon-button
@@ -91,5 +72,6 @@
         </button>
       </div>
     </footer>
+    }
   </div>
 </div>
