--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -197,5 +197,59 @@
         }
       }
     }
+    
+    footer{
+      position: absolute;
+      padding: 0 12px;
+      bottom: 1.5rem;
+
+      .logout {
+        width: 177px;
+        display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 0.375rem;
+        background-color: #f8fafc;
+        padding: 0.3rem 0.75rem;
+        font-size: 0.85rem;
+        font-weight: 500;
+        color: #475569;
+        border: 1px solid #64748b;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
+        .user-name{
+          display: flex;
+          align-items: center;
+
+          mat-icon{
+            margin-right: 0.5rem;
+          }
+
+          div{
+            width: 120px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+
+        .small-button {
+          width: 35px;
+          height: 35px;
+          padding: .3rem;
+
+          &:hover{
+            color: #7D0A0A;
+            background-color: #fef2f2;
+          }
+
+          .small-icon {
+            font-size: 18px;
+            width: 18px;
+            height: 18px;
+          }
+        }
+      }
+    }
   }
 }
