--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -23,7 +23,9 @@
           </div>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button><mat-icon>add</mat-icon> Detalles</button>
+          <button mat-raised-button (click)="detailsProduct(producto.id)">
+            <mat-icon>add</mat-icon> Detalles
+          </button>
           <button mat-raised-button color="primary">
             <mat-icon>shopping_cart</mat-icon> Añadir al carrito
           </button>
