--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,7 +59,11 @@
           flex: 1 1 auto;
         }
 
+        .demo-section {
+          margin: 0 16px;
+        }
       }
+
     }
     .contenido{
       padding: 1rem;
