--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -36,6 +36,14 @@
           </button>
         </mat-form-field>
         <button mat-raised-button color="primary">Ingresar</button>
+        <div class="crear-cuenta">
+          <p>
+            No tienes cuenta?
+            <button type="button" (click)="redirectToRegister()">
+              clic aqui
+            </button>
+          </p>
+        </div>
       </form>
     </div>
     <footer>
