--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -26,9 +26,14 @@
           <button mat-raised-button (click)="detailsProduct(producto.id)">
             <mat-icon>add</mat-icon> Detalles
           </button>
-          <button mat-raised-button color="primary">
-            <mat-icon>shopping_cart</mat-icon> Añadir al carrito
-          </button>
+          <form [formGroup]="form" (ngSubmit)="submitForm(producto.id)">
+            <input type="hidden" formControlName="qty" />
+            <div class="botones">
+              <button mat-raised-button color="primary">
+                <mat-icon>shopping_cart</mat-icon> Añadir al carrito
+              </button>
+            </div>
+          </form>
         </mat-card-actions>
       </mat-card>
       }
