Añadir funcionalidad de búsqueda de productos y corregir etiquetas de imagen y categoría

--- a/src/app/components/sidebar-admin/sidebar-admin.component.html
+++ b/src/app/components/sidebar-admin/sidebar-admin.component.html
@@ -47,12 +47,20 @@
       </li>
       <li>
         <div class="item">
+          <a routerLink="orders" routerLinkActive="router-link-active">
+            <mat-icon>grading</mat-icon>
+            <span>Ordenes</span>
+          </a>
+        </div>
+      </li>
+      <!-- <li>
+        <div class="item">
           <a routerLink="solicitudes" routerLinkActive="router-link-active">
             <mat-icon>handshake</mat-icon>
             <span>Solicitudes</span>
           </a>
         </div>
-      </li>
+      </li> -->
     </ul>
     @if(isLogged){
     <footer>
