--- a/src/app/pages/pages-admin/usuarios/handle-usuario/handle-usuario.component.html
+++ b/src/app/pages/pages-admin/usuarios/handle-usuario/handle-usuario.component.html
@@ -48,6 +48,7 @@
                 matInput
                 placeholder="Placeholder"
                 formControlName="telefono"
+                maxlength="9"
               />
             </mat-form-field>
           </div>
@@ -129,6 +130,7 @@
                 matInput
                 placeholder="Placeholder"
                 formControlName="telefono"
+                maxlength="9"
               />
             </mat-form-field>
           </div>
