--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -15,7 +15,7 @@
             Descripción: <span>{{ product.descripcion }}</span>
           </li>
           <li>
-            <!-- Categoria: <span>{{ product.category.nombre }}</span> -->
+            Categoria: <span>{{ product.category.nombre }}</span>
           </li>
         </ul>
       </div>
