--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -10,7 +10,7 @@
           class="img-card"
           mat-card-image
           [src]="producto.ruta_imagen"
-          alt="Photo of a Shiba Inu"
+          alt="Producto"
         />
         <mat-card-content>
           <mat-card-title>{{ producto.nombre }}</mat-card-title>
