--- a/src/app/pages/pages-admin/contenido/contenido.component.html
+++ b/src/app/pages/pages-admin/contenido/contenido.component.html
@@ -28,7 +28,7 @@
           class="img-card"
           mat-card-image
           [src]="producto.ruta_imagen"
-          alt="Photo of a Shiba Inu"
+          alt="Producto"
         />
         <mat-card-content>
           <mat-card-title>{{ producto.nombre }}</mat-card-title>
